finally have fixed the horizontal scroll function

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     animation: fade-in ease-in 0.8s 1;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 
 }
 
@@ -15,7 +16,8 @@ body {
 }
 
 section {
-    min-height: 100vh;
+    height: 100vh !important;
+    width: 100vw !important;
 }
 
 .send-front {
@@ -84,7 +86,6 @@ section {
 
 #hero {
     position: relative;
-    height: 100vh;
     overflow: hidden;
 }
 
@@ -171,7 +172,6 @@ section {
 
 /* Section 02 */
 .section02, .section03 {
-    height: 100vh;
     flex-shrink: 0;
 
     position: relative;
@@ -180,7 +180,7 @@ section {
 #section03 {
     width: 100vw;
     /* overflow-x: scroll; */
-    scroll-snap-type: x mandatory;
+    /* scroll-snap-type: x mandatory; */
     display: flex;
     /* overscroll-behavior-x: contain; */
     
@@ -188,13 +188,6 @@ section {
 
 .horizontal-container {
     display: flex;
-   
-    
-   
-}
-
-.horizontal-container :first-child {
-    width: 100vw;
 }
 
 .section-text {
@@ -202,11 +195,12 @@ section {
 }
 
 .section02-content-container, .section-content-container {
-    display: inline-flex;
+    display: flex;
+    flex-wrap: nowrap;
 
 
-    width:  100vw;
-    scroll-snap-align: start;
+    width:  100vw !important;
+    /* scroll-snap-align: start; */
     padding: 2rem;
     flex-direction: column;
     align-items: flex-start;
@@ -220,9 +214,9 @@ section {
 
     color: #000;
 
-    font-family: "din-condensed";
-    font-size: 12rem;
-    font-weight: 900;
+    font-family: "Anton";
+    font-size: 10rem;
+    font-weight: 400;
     letter-spacing: -0.15rem;
 }
 
@@ -281,14 +275,63 @@ section {
     animation-delay: 20s;
 }
 
+.section04 {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
 
+    text-align: center;
 
+    background: rgb(2,0,36);
+    background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(120,120,120,1) 34%, rgba(228,228,228,1) 74%, rgba(255,255,255,1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(120,120,120,1) 34%, rgba(228,228,228,1) 74%, rgba(255,255,255,1) 100%);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(120,120,120,1) 34%, rgba(228,228,228,1) 74%, rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#ffffff",GradientType=1);
+}
 
+.section04-content-container {
+    padding: 32px;
 
+    overflow-y: scroll;
+}
 
+.section04-paragraph {
+    max-width: 1000px;
+    
+    font-family: "Anton";
+    font-size: 2rem;
+    font-weight: 400;
+    color: white;
+}
 
+.section05 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 
+    background-color: #020024;
+    color: white;
 
+    position: relative;
+    overflow-y: scroll;
+}
+
+.section05-content-container {
+    max-width: 1200px;
+    text-align: center;
+ 
+}
+
+.section05-paragraph {
+    font-size: 5rem;
+    font-weight: 100;
+
+    opacity: 0.8;
+    white-space: nowrap;
+}
 
 
 
